fix: 增加nacos-common的依赖。 fix: 重新配置dependencies的dubbo模块依赖情况，取消原始的dubbo-bom依赖。 fix: 增加一些测试配置

--- a/dubbo-demo/dubbo-demo-spring-boot/dubbo-demo-spring-boot-provider/src/main/resources/application.yml
+++ b/dubbo-demo/dubbo-demo-spring-boot/dubbo-demo-spring-boot-provider/src/main/resources/application.yml
@@ -17,13 +17,16 @@
 dubbo:
   application:
     name: dubbo-springboot-demo-provider
+    register-mode: instance
+    metadata-service-protocol: tri
+    metadata-service-port: 20082
   protocol:
-    name: dubbo
-    port: -1
+    name: tri
+    port: 20081
   registry:
     id: zk-registry
-    address: zookeeper://127.0.0.1:2181
+    address: nacos://127.0.0.1:8848
   config-center:
-    address: zookeeper://127.0.0.1:2181
+    address: nacos://127.0.0.1:8848
   metadata-report:
-    address: zookeeper://127.0.0.1:2181
+    address: nacos://127.0.0.1:8848
