--- a/dubbo-demo/pom.xml
+++ b/dubbo-demo/pom.xml
@@ -45,7 +45,7 @@
         <dependencies>
             <dependency>
                 <groupId>org.apache.dubbo</groupId>
-                <artifactId>dubbo-bom</artifactId>
+                <artifactId>dubbo-dependencies-bom</artifactId>
                 <version>${project.parent.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
